--- a/home/3_test/css/index.scss
+++ b/home/3_test/css/index.scss
@@ -107,6 +107,17 @@ main {
   }
 }
 
+.img-box-shadow {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: auto;
+  bottom: auto;
+  width: 100%;
+  height: 100%;
+  box-shadow: inset 0px -80px 50px 0px rgba(0,0,0,0.4);
+}
+
 .travel-better {
   padding: 0px 80px;
 
@@ -254,13 +265,6 @@ main {
       }
 
       .img-box-shadow {
-        position: absolute;
-        top: 0px;
-        left: 0px;
-        right: auto;
-        bottom: auto;
-        width: 100%;
-        height: 100%;
         box-shadow: inset 0px 100px 100px 0px rgba(0,0,0,0.4);
       }
 
@@ -401,10 +405,27 @@ main {
     }
 
     > em {
-      margin-top: 16px;
-      font-size: 23px;
+      margin-top: 20px;
+      font-size: 25px;
       font-weight: bold;
     }
+
+    p {
+      //ie에서 안됌
+      display: -webkit-box;
+      -webkit-line-clamp: 3;
+      -webkit-box-orient: vertical;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      width: 100%;
+      height: 4.5em;
+      margin-top: 20px;
+      line-height: 1.5em;
+      color: #111;
+      font-size: 13px;
+      word-break: break-all;
+    }
+    
 
     .date {
       color: #cbb6b1;
@@ -413,8 +434,8 @@ main {
 
   .comment {
     position: absolute;
-    bottom: 10px;
-    left: 10px;
+    bottom: 20px;
+    left: 20px;
     top: auto;
     right: auto;
     font-size: 11px;
@@ -431,8 +452,8 @@ main {
 
   .like {
     position: absolute;
-    bottom: 10px;
-    left: 50px;
+    bottom: 20px;
+    left: 60px;
     top: auto;
     right: auto;
     font-size: 11px;
@@ -449,8 +470,8 @@ main {
 
   .share {
     position: absolute;
-    bottom: 10px;
-    right: 10px;
+    bottom: 20px;
+    right: 20px;
     left: auto;
     top: auto;
     color: #67706f;
@@ -524,7 +545,6 @@ main {
     width: 20px;
     height: 20px;
     border-radius: 10px;
-    background: pink;
     overflow: hidden;
 
     img {
@@ -595,7 +615,6 @@ main {
   .panel-post {
     width: 25vw;
     min-width: 256px;
-    background: pink;
 
     img {
       width: 100%;
@@ -618,20 +637,11 @@ main {
 
     .post {
       width: 90%;
-
-      p {
-        padding-top: 25px;
-        color: #111;
-      }
     }
   }
 }
 
 @media all and (max-width: 1200px) {
-  nav {
-    background-color: rgba(0,0,0,0.75);
-  }
-
   .travel-better {
     .contents-wrap {
       .text-contents {
@@ -665,12 +675,19 @@ main {
 }
 
 @media all and (max-width: 1300px) {
-  .travel-journals > section .tab-panel {
-    &.on {
+  nav {
+    top: 5px;
+    background-color: rgba(0,0,0,0.75);
+  }
 
+  .useful-things {
+    .post-box {
+      .post {
+        > em {
+          font-size: 18px;
+        }
+      }
     }
   }
 
-  .travel-journals > section .tab-panel > li {
-  }
 }
